<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"

    android:layout_height="fill_parent"
    android:background="@color/colorSecondaryLite"
    android:orientation="vertical"

    tools:context="com.oriana.moroccan.bdarija.NewItemActivity">

    <RadioGroup
        android:layout_width="match_parent"

        android:textColor="@color/colorPrimaryText"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="100"
        android:id="@+id/rgTypes">

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="25"
            android:background="@drawable/cell_shape2"
            android:button="@android:color/transparent"
            android:checked="false"
            android:gravity="center"

            android:padding="15dp"
            android:text="@string/histories"
            android:textColor="@color/colorPrimaryText"

            />

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="25"
            android:background="@drawable/cell_shape2"
            android:button="@android:color/transparent"


            android:gravity="center"
            android:padding="15dp"
            android:text="@string/jokes"
            android:textColor="@color/colorPrimaryText" />

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:gravity="center"
            android:layout_weight="25"
            android:background="@drawable/cell_shape2"
            android:button="@android:color/transparent"


            android:textColor="@color/colorPrimaryText"
            android:padding="15dp"
            android:text="@string/problems" />

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="25"

            android:textColor="@color/colorPrimaryText"
            android:background="@drawable/cell_shape2"
            android:button="@android:color/transparent"
            
            android:padding="15dp"
            android:gravity="center"
            android:text="@string/experiences" />

    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center_horizontal|top"
        android:minHeight="200dp"
        android:minWidth="400dp"
        android:orientation="vertical"
        android:padding="5dp"
        android:weightSum="1">


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:onClick="addNewItem"

            app:srcCompat="@drawable/ic_menu_send"
            app:backgroundTint="@color/colorAccent"
            app:rippleColor="@color/colorPrimaryDark"

            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"

            />

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:onClick="pickerPhoto"

            app:srcCompat="@drawable/ic_menu_camera"
            app:backgroundTint="@color/colorAccent"
            app:rippleColor="@color/colorPrimaryDark"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
             />

        <EditText
            android:id="@+id/et_quote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_gravity="top|center_vertical"
            android:background="@drawable/et_shape"
            android:ems="5"
            android:padding="5dp"
            android:gravity="top|center_horizontal"
            android:hint="@string/texthint"
            android:inputType="textMultiLine"
            android:lineSpacingExtra="5dp"
            android:maxLines="5"
            android:minLines="2"
            android:textColor="@color/colorPrimaryText"
            android:layout_marginTop="3dp"
            android:layout_below="@+id/fab"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <requestFocus />
        </EditText>

    </RelativeLayout>

</LinearLayout>